apps/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: trilium
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trilium.example.internal
      secretName: trilium-tls
  rules:
    - host: trilium.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium
                port:
                  number: 80
